--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,29 @@
 
 <html>
-        <head>
-            {% if title %}
-            <title>{{ title }} - Microblog</title>
-            {% else %}
-            <title>Welcome to Microblog</title>
-            {% endif %}
-        </head>
+
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+        body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
+        .w3-row-padding img {margin-bottom: 12px}
+        .bgimg {
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+          min-height: 100%;
+        }
+        </style>
+
         <body>
+            
+            <h1>EmoRecom</h1>
+
+
             <h1>Hi, {{ user.username }}!</h1>
+            <h3> You look {{emotion.emo}} </h3>
             {% for post in posts %}
             <div><p>{{ post.author.username }} says: <b>{{ post.body }}</b></p></div>
             {% endfor %}
