--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,17 @@
 
+
+
 <html>
 
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <style>
         body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         .w3-row-padding img {margin-bottom: 12px}
         .bgimg {
@@ -15,32 +20,27 @@
           background-size: cover;
           min-height: 100%;
         }
-        </style>
+    </style>
 
-        <body>
-            
-            <h1>EmoRecom</h1>
+    <body>
 
+        <h1>EmoRecom</h1>
+        <h1>Hi, {{ user.username }}!</h1>
+        <h3> You look {{emotion.emo}} </h3>
+        {% for post in posts %}
+        <div><p>{{ post.author.username }} says: <b>{{ post.body }}</b></p></div>
+        {% endfor %}
 
-            <h1>Hi, {{ user.username }}!</h1>
-            <h3> You look {{emotion.emo}} </h3>
-            {% for post in posts %}
-            <div><p>{{ post.author.username }} says: <b>{{ post.body }}</b></p></div>
-            {% endfor %}
+        <a href="/my-link/">Click me</a>
 
-            <a href="/my-link/">Click me</a>
-            
-            <div id="googleMap" style="width:100%;height:400px;"></div>
+        <div id="googleMap" style="width:100%;height:400px;"></div>
 
-            <script src="{{ url_for('static', filename = 'map.js') }}"></script>
-
-            <script> setTimeout(function () {
+        <script src="{{ url_for('static', filename= 'map.js') }}"></script>
+        <script> setTimeout(function () {
                     getUserLocation();
                 }, 1000);  </script>
-        
-            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtTESyXpOa9WuicoLMGWpWkebGbIIBFfs&callback=myMap"></script>
-
-            <button type="button" onclick="getUserLocation(this)" name="enable">Enable</button>
-
-        </body>
-    </html>
+        <script
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtTESyXpOa9WuicoLMGWpWkebGbIIBFfs&callback=myMap"></script>
+        <button type="button" onclick="getUserLocation(this)" name="enable">Enable</button>
+    </body>
+</html>
