--- a/templates/start.html
+++ b/templates/start.html
@@ -83,7 +83,7 @@
 
     <body>
         <h1 class=center>EmoRecom</h1>
-        <a href="index">
+        <a href="camera">
         <img class=face src="/static/face.png" alt="FACE"   >
         </a>
         <h1 class=center>Hi, {{ user.username }}!</h1>
