--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,16 @@
           background-size: cover;
           min-height: 100%;
         }
+
+        .center {
+            display: block;
+            border-radius: 50%;
+            height: 300px;
+            width: 300px;
+            margin: 100 auto;
+            /* animation: rotate 2s infinite linear;  */
+            
+        }
     </style>
 
     <body>
@@ -30,9 +40,7 @@
         {% for post in posts %}
         <div><p>{{ post.author.username }} says: <b>{{ post.body }}</b></p></div>
         {% endfor %}
-
         <a href="/my-link/">Click me</a>
-
         <div id="googleMap" style="width:100%;height:400px;"></div>
 
         <script src="{{ url_for('static', filename= 'map.js') }}"></script>
