--- a/templates/index.html
+++ b/templates/index.html
@@ -1,54 +1,186 @@
-
-
-
 <html>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Montserrat">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+    body,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        font-family: "Montserrat", sans-serif;
+        color: white;
+    }
 
-    <style>
-        body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
-        .w3-row-padding img {margin-bottom: 12px}
-        .bgimg {
-          background-position: center;
-          background-repeat: no-repeat;
-          background-size: cover;
-          min-height: 100%;
-        }
+    body {
+        background-color: black;
+    }
 
-        .center {
-            display: block;
+    .w3-row-padding img {
+        margin-bottom: 12px
+    }
+
+    .bgimg {
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        min-height: 100%;
+    }
+
+    /* ============================================================= */
+    .center {
+        text-align: center;
+    }
+
+    .face {
+        /* display: block;
+            background: white;
             border-radius: 50%;
             height: 300px;
             width: 300px;
-            margin: 100 auto;
-            /* animation: rotate 2s infinite linear;  */
-            
+            margin: 0; */
+        display: block;
+        background: white;
+        border-radius: 50%;
+        height: 300px;
+        width: 300px;
+        margin: 100 auto;
+        /* animation: rotate 2s infinite linear;  */
+
+    }
+
+    @keyframes rotate {
+        0% {
+            transform: rotate(0deg);
         }
-    </style>
 
-    <body>
+        100% {
+            transform: rotate(360deg);
+        }
+    }
 
-        <h1>EmoRecom</h1>
-        <h1>Hi, {{ user.username }}!</h1>
-        <h3> You look {{emotion.emo}} </h3>
-        {% for post in posts %}
-        <div><p>{{ post.author.username }} says: <b>{{ post.body }}</b></p></div>
-        {% endfor %}
-        <a href="/my-link/">Click me</a>
-        <div id="googleMap" style="width:100%;height:400px;"></div>
+    .hi {
+        width: 100px;
+        height: 100px;
+        background-color: red;
+        position: relative;
+        -webkit-animation-name: example;
+        /* Safari 4.0 - 8.0 */
+        -webkit-animation-duration: 4s;
+        /* Safari 4.0 - 8.0 */
+        animation-name: example;
+        animation-duration: 4s;
 
-        <script src="{{ url_for('static', filename= 'map.js') }}"></script>
-        <script> setTimeout(function () {
-                    getUserLocation();
-                }, 1000);  </script>
-        <script
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtTESyXpOa9WuicoLMGWpWkebGbIIBFfs&callback=myMap"></script>
-        <button type="button" onclick="getUserLocation(this)" name="enable">Enable</button>
-    </body>
+    }
+
+    /* Safari 4.0 - 8.0 */
+    @-webkit-keyframes example {
+        0% {
+            background-color: red;
+            left: 0px;
+            top: 0px;
+        }
+
+        25% {
+            background-color: yellow;
+            left: 200px;
+            top: 0px;
+        }
+
+        50% {
+            background-color: blue;
+            left: 200px;
+            top: 200px;
+        }
+
+        75% {
+            background-color: green;
+            left: 0px;
+            top: 200px;
+        }
+
+        100% {
+            background-color: red;
+            left: 0px;
+            top: 0px;
+        }
+    }
+
+    /* Standard syntax */
+    @keyframes example {
+        0% {
+            background-color: red;
+            left: 0px;
+            top: 0px;
+        }
+
+        25% {
+            background-color: yellow;
+            left: 200px;
+            top: 0px;
+        }
+
+        50% {
+            background-color: blue;
+            left: 200px;
+            top: 200px;
+        }
+
+        75% {
+            background-color: green;
+            left: 0px;
+            top: 200px;
+        }
+
+        100% {
+            background-color: red;
+            left: 0px;
+            top: 0px;
+        }
+    }
+</style>
+
+<body>
+    <div id="div1">
+        <h1 class="center">EmoRecom</h1>
+        <a href="camera">
+            <img class=face src="/static/face.png" alt="FACE">
+        </a>
+
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+
+
+    <h1 class="center" id="div2"><p class="text">Message</p></h1>
+    <script>
+        $(function () {
+            sayHi();
+          
+
+            function sayHi() {
+                setTimeout(sayHi, 4000);
+                $.ajax({
+                    type: "GET",
+                    url: "message",
+                    success: function (data) {
+                        $('.text').text(data);
+                        $("#div2").fadeIn(1000);
+                        $("#div2").delay(2000).fadeOut(1000);
+
+                    },
+                });
+            }
+        });
+
+    </script>
+
+</body>
+
 </html>
