--- a/templates/Location2.html
+++ b/templates/Location2.html
@@ -102,7 +102,7 @@
         float: left;
         text-align: center;
         width:50%;
-        height:50px;
+        height:50%;
         background: url("static/faceinverse.png") no-repeat center center fixed; 
         -webkit-background-size: cover;
         -moz-background-size: cover;
