--- a/templates/camera.html
+++ b/templates/camera.html
@@ -3,15 +3,14 @@
 
 <html>
 
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-        <link rel="stylesheet"
-            href="https://fonts.googleapis.com/css?family=Montserrat">
-        <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
-        <style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
             body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif; color:white; background-color: black;text-align: center;}
             .w3-row-padding img {margin-bottom: 12px}
             .bgimg {
@@ -19,6 +18,23 @@
               background-repeat: no-repeat;
               background-size: cover;
               min-height: 100%;
+            }
+
+            .face {
+            /* display: block;
+                background: white;
+                border-radius: 50%;
+                height: 300px;
+                width: 300px;
+                margin: 0; */
+                display: inline-block;
+                background: yellow;
+                border-radius: 50%;
+                height: 100px;
+                width: 100px;
+                margin: 0 auto;
+                /* animation: rotate 2s infinite linear;  */
+
             }
     
             .centera {
@@ -28,10 +44,10 @@
                 width:50%;
                 margin: 0 auto;*/
                 width: 500px;
-    height: 500px;
-    -moz-border-radius: 50%; 
-    -webkit-border-radius: 50%; 
-    border-radius: 50%;
+                height: 500px;
+                -moz-border-radius: 50%; 
+                -webkit-border-radius: 50%; 
+                border-radius: 50%;
             }
             .centerb{
                 display: inline-block;
@@ -43,26 +59,25 @@
                 
             }
         </style>
-    
-        <body>
-            <div class='parent'>
-                <h1 class=centerb>emo</h1><img class=centerc src="static/faceinverse.png"> 
-            </div>
-          
-            <div class='parent'>
-                <img class=centera src="{{ url_for('video_feed')}}"> 
-            </div>
-            
-    
-            
+    <body>
+        <div class='parent'>
+            <h1 class=centerb>emo</h1><img class=centerc
+                src="static/faceinverse.png">
+        </div>
 
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <div class='parent'>
+            <img class=centera src="{{ url_for('video_feed')}}">
+        </div>
 
-
-
-            <h1 class="center" id="div2"><p class="text">Message</p></h1>
-
-            <script>
+        <a href="map">
+                <img class=face src="/static/face.png" alt="FACE">
+            </a>
+        
+        <script
+            src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <h1 class="center" id="div2"><p class="text">Message</p></h1>
+        
+        <script>
                 $(function () {
                     sayHi();
                     function sayHi() {
@@ -71,9 +86,11 @@
                             type: "GET",
                             url: "message",
                             success: function (data) {
-                                $('.text').text(data);
+                                $('.text').text('You look ' + data);
                                 $("#div2").fadeIn(1000);
                                 // $("#div2").delay(2000).fadeOut(1000);
+                                
+                                $('.face').attr('src','/static/'+data+'.png');
         
                             },
                         });
@@ -81,6 +98,5 @@
                 });
         
             </script>
-            
-        </body>
-    </html>
+    </body>
+</html>
