--- a/templates/camera.html
+++ b/templates/camera.html
@@ -61,7 +61,7 @@
         </style>
     <body>
         <div class='parent'>
-            <h1 class=centerb>emo</h1><img class=centerc
+            <h1 class=centerb>emoai</h1><img class=centerc
                 src="static/faceinverse.png">
         </div>
 
