--- a/templates/start.html
+++ b/templates/start.html
@@ -82,7 +82,7 @@
     </style>
 
     <body>
-        <h1 class=center>EmoRecom</h1>
+        <h1 class=center>Emoai</h1>
         <a href="Location1">
         <img class=face src="/static/face.png" alt="FACE"   >
         </a>
