--- a/templates/map.html
+++ b/templates/map.html
@@ -42,7 +42,7 @@
                 <body>
                     
                         <div class='parent'>
-                                <h1 class=centerb>EmoRecom</h1><img class=centerc
+                                <h1 class=centerb>emoai</h1><img class=centerc
                                     src="static/faceinverse.png">
                             </div>
         
