--- a/templates/map.html
+++ b/templates/map.html
@@ -1,13 +1,12 @@
-
 <html>
 
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <style>
-                body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif; color:white;background-color: black}
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+    body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif; color:white;background-color: black}
                 .w3-row-padding img {margin-bottom: 12px}
                 .bgimg {
                   background-position: center;
@@ -38,45 +37,43 @@
                     
                 }
                 </style>
-        
-                <body>
-                    
-                        <div class='parent'>
-                                <h1 class=centerb>emoai</h1><img class=centerc
-                                    src="static/faceinverse.png">
-                            </div>
-        
-        
-                    <h1>Hi, {{ user.username }}, You look Happy !!!</h1>
-                    <h1><b>We Recommend You To</b></h1>>
-                    
-        
-                    <a href="/my-link/">Click me</a>
-                    
-                    <div id="googleMap" style="width:100%;height:680px;"></div>
-        
-                    <script src="{{ url_for('static', filename = 'map.js') }}"></script>
-        
-                    <script> setTimeout(function () {
 
-                            $(function () {
-    
-                    $.ajax({
-                        type: "GET",
-                        url: "getMap",
-                        success: function (data) {
-                            alert(data);
-                            updateMap(lat, lng, "data");
-                        },
-                    });
-      
+<body>
 
-                            getUserLocation();
-                        }, 1000);  </script>
-                
-                    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtTESyXpOa9WuicoLMGWpWkebGbIIBFfs&callback=myMap"></script>
-        
-                    <button type="button" onclick="getUserLocation(this)" name="enable">Enable</button>
-        
-                </body>
-            </html>
+    <div class='parent'>
+        <h1 class=centerb>emoai</h1><img class=centerc src="static/faceinverse.png">
+    </div>
+
+
+    <h1>Hi, {{ user.username }}, You look Happy !!!</h1>
+    <h1><b>We Recommend You To</b></h1>>
+
+
+    <a href="/my-link/">Click me</a>
+
+    <div id="googleMap" style="width:100%;height:680px;"></div>
+    <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+
+    <script src="{{ url_for('static', filename = 'map.js') }}"></script>
+
+    <script>
+        $(document).ready(function () {
+            $.ajax({
+                type: "GET",
+                url: "fakejson",
+                success: function (data) {
+                    updateMap(43.136095,-70.9266, data);
+                },
+            });
+        });
+
+
+    </script>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtTESyXpOa9WuicoLMGWpWkebGbIIBFfs&callback=myMap"></script>
+
+    <button type="button" onclick="getUserLocation(this)" name="enable">Enable</button>
+
+</body>
+
+</html>
