--- a/templates/camera.html
+++ b/templates/camera.html
@@ -81,14 +81,14 @@
                 $(function () {
                     sayHi();
                     function sayHi() {
-                        setTimeout(sayHi, 400);
+                        setTimeout(sayHi, 3000);
                         $.ajax({
                             type: "GET",
                             url: "message",
                             success: function (data) {
                                 $('.text').text('You look ' + data);
-                                $("#div2").fadeIn(1000);
-                                // $("#div2").delay(2000).fadeOut(1000);
+                                $("#div2").fadeIn(500);
+                                $("#div2").delay(2000).fadeOut(500);
                                 
                                 $('.face').attr('src','/static/'+data+'.png');
         
