--- a/templates/map.html
+++ b/templates/map.html
@@ -6,50 +6,67 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-    body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif; color:white;background-color: black}
-                .w3-row-padding img {margin-bottom: 12px}
-                .bgimg {
-                  background-position: center;
-                  background-repeat: no-repeat;
-                  background-size: cover;
-                  min-height: 100%;
-                }
+        body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif; color:white; background-color: black;text-align: center;}
+        .w3-row-padding img {margin-bottom: 12px}
+        .bgimg {
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+          min-height: 100%;
+        }
 
-                .centera {
-                    display: inline-block;
-                    /*border-radius: 50%;
-                    height: 70%;
-                    width:50%;
-                    margin: 0 auto;*/
-                    width: 500px;
-                    height: 500px;
-                    -moz-border-radius: 50%; 
-                    -webkit-border-radius: 50%; 
-                    border-radius: 50%;
-                }
-                .centerb{
-                    display: inline-block;
-                }
-                .centerc {
-                    display: inline-block;
-                    height: 65px;
-                    width: 65px;
-                    
-                }
-                </style>
+        .face {
+        /* display: block;
+            background: white;
+            border-radius: 50%;
+            height: 300px;
+            width: 300px;
+            margin: 0; */
+            display: inline-block;
+            background: yellow;
+            border-radius: 50%;
+            height: 100px;
+            width: 100px;
+            margin: 0 auto;
+            /* animation: rotate 2s infinite linear;  */
+
+        }
+
+        .centera {
+            display: inline-block;
+            /*border-radius: 50%;
+            height: 70%;
+            width:50%;
+            margin: 0 auto;*/
+            width: 500px;
+            height: 500px;
+            -moz-border-radius: 50%; 
+            -webkit-border-radius: 50%; 
+            border-radius: 50%;
+        }
+        .centerb{
+            display: inline-block;
+        }
+        .centerc {
+            display: inline-block;
+            height: 65px;
+            width: 65px;
+            
+        }
+    </style>
 
 <body>
 
-    <div class='parent'>
-        <h1 class=centerb>emoai</h1><img class=centerc src="static/faceinverse.png">
-    </div>
+        <div class='parent'>
+                <h1 class=centerb>emoai</h1><img class=centerc
+                    src="static/faceinverse.png">
+            </div>
 
 
-    <h1>Hi, {{ user.username }}, You look Happy !!!</h1>
-    <h1><b>We Recommend You To</b></h1>>
+    <h1>Hi, {{ user.username }}, you look Happy !!!</h1>
+    <h1><b>We recommend:</b></h1>
 
 
-    <a href="/my-link/">Click me</a>
 
     <div id="googleMap" style="width:100%;height:680px;"></div>
     <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
@@ -71,8 +88,6 @@
     </script>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtTESyXpOa9WuicoLMGWpWkebGbIIBFfs&callback=myMap"></script>
-
-    <button type="button" onclick="getUserLocation(this)" name="enable">Enable</button>
 
 </body>
 
